[package]
name = "reSearch"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
wry = { git = "https://github.com/tauri-apps/wry", branch = "dev" }
tauri = "1.7.2"
web_view = "0.7.0"

[patch.crates-io]
webkit2gtk-sys = "=2.0.1"